--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,13 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import os"
+    "import os\n",
+    "from scipy.signal import butter, filtfilt\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +30,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bandpassFilter(data, sr, lowcut, highcut):\n",
+    "    ret = []\n",
+    "    nyq = 0.5 * sr\n",
+    "    low = lowcut / nyq\n",
+    "    high = highcut / nyq\n",
+    "    b, a = butter(5, [low, high], btype='band')\n",
+    "    for d in data.T:\n",
+    "        ret.append(filtfilt(b, a, d))\n",
+    "    return ret"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,24 +59,16 @@
     "            continue\n",
     "        cleaned_data.append([])\n",
     "        mask = (raw_data[:, 0] >= start) & (raw_data[:, 0] <= end)\n",
-    "        cleaned_data[-1].extend(raw_data[mask][:1380])\n",
+    "        filtered_data = raw_data[mask][:1400]\n",
+    "        filtered_data = bandpassFilter(filtered_data, 1000, 50, 450)\n",
+    "        cleaned_data[-1].extend(filtered_data)\n",
     "        labels.append(label)\n",
     "    return np.array(cleaned_data), labels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "raw_data, marker_data = load_data('raw_data/lsl_data_2023-10-27-16-22-14.mat')\n",
-    "filter_data, labels = filter_data(raw_data, marker_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,13 +86,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "np.save( 'processed_data/all_data.npy', all_data)\n",
     "np.save('processed_data/all_labels.npy', all_labels)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(240, 5, 1400)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
